assets/css/styles.css
.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

/* 1 . General card layout */

html,
body {
  width: 100%;
  height: 100%;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--yellow);
}

.container {
  width: clamp(324px, 80vw, 384px);
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.blog-card {
  height: 522px;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: var(--white);
  overflow: hidden;
  border-radius: 12px;
  gap: var(--spacing-300);
  padding: var(--spacing-300);
  box-shadow: 10px 10px 0px var(--gray-950);
  border: 1px solid var(--gray-500);
}

.card-content {
  display: flex;
  flex-direction: column;
  gap: 14px;
}

.card-img {
  border-radius: 12px;
}

.card-badge {
  background-color: var(--yellow);
  font-family: Figtree-ExtraBold;
  font-size: 14px;
  line-height: 150%;
  letter-spacing: 0px;
  width: fit-content;
  padding: var(--spacing-100) var(--spacing-150);
  border-radius: 4px;
}

.card-date {
  font-family: Figtree-Medium;
  font-size: 16px;
  line-height: 150%;
  letter-spacing: 0px;
}

.card-title {
  font-family: Figtree-ExtraBold;
  white-space: nowrap;
}

.card-title:hover {
  color: var(--yellow);
  cursor: pointer;
}

.card-title::after {
  color: var(--yellow);
}

.card-text {
  font-family: Figtree-Medium;
  color: var(--gray-500);
  font-size: 14px;
  line-height: 150%;
  letter-spacing: 0px;
  padding: 0 8px 0 0;
}

.card-footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--spacing-150);
}

.card-pub-img {
  width: 32px;
  height: 32px;
}

.card-pub-name {
  font-family: Figtree-Extrabold;
}

